# dbus-demo

./: CMakeLists.txt  demoadaptor1.cpp  demoadaptor1.h  demoadaptor2.cpp  demoadaptor2.h  demoif1.cpp  demoif1.h  demoif2.cpp  demoif2.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
xml/: cn.kylinos.dbusdemoiface.xml  cn.kylinos.dbusdemoiface2.xml
